2013-07-11 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* components/txtl_protein_lacI.m: inducer degradation has been removed
	* core/txtl_setup_new_protein_added.m: cross check function, this function maintains integrity of reactions if a protein manually added to the TXTL reaction. 
2013-07-09 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* core/txtl_mrna_degradation.m: separate file for mRNA degrations reactions, mainly to keep the code maintainable
	* core/txtl_plot_gui.m: bugfix
2013-06-24 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* aux/: this folder is renamed to auxiliary due to compatibility issues with Windows
2013-06-17 Zoltan Tuza <zoltuz@zoltuz-laptop>
	* examples/*: configobj migrated to run_sim, simulation time has to be given, option for configobj.
	* core/txtl_plot.m: default dataGroups cellarray for easier plotting
	* aux/expression_endtime.m: new aux function for calculating expression and time and rate (expression_rate.m)

2013-05-20  Zoltan Tuza <zoltuz@zoltuz-laptop>
	* core/txtl_runsim.m: RNAP degradation has been added, no NTP degradation in the model. Distinguished ATP specie added used only in TL. 
	* components/*: deCFP protein/param files added, component parameters have been changed.
	* examples/*: genetic_switch: bugfix, code clean up.
	* aux/*: new directory for auxiliary functions.
2013-02-21  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* component/txtl_protein_tetR.m: aTc degradation is no longer used (no
	aTc degradation has been observed so far)
	* core/txtl_run.m: ATP regeneration model has been added

2013-02-13  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* components/txtl_prom_ptet.m: modeling error is corrected
	* components/txtl_protein_tetR.m: 2aTc:tetR is formed instead of
	aTc:tetR c.f. Vassilios et al. 2007.
	* components/txtl_prom_p70pr1.m: new p70 promoter, 20% strength of p70
	* components/txtl_param_*.m: parameter numbers are adjusted, to match
	experimental data
	* core/txtl_buffer.m and core/txtl_extract.m:  parameters